infra/manifests/hasura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura
  namespace: hasura
  labels:
    app.kubernetes.io/name: hasura
    app.kubernetes.io/instance: hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hasura
      app.kubernetes.io/instance: hasura
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hasura
        app.kubernetes.io/instance: hasura
    spec:
      nodeSelector:
        kubernetes.io/hostname: vmi3137202
      containers:
        - name: hasura
          image: ghcr.io/binary64/graphql-engine:remote-schema-local-file
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: schema-vol
              mountPath: /schema
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: schema-vol
          emptyDir: {}
