infra/manifests/hasura/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura-external
  namespace: hasura
  labels:
    app.kubernetes.io/name: hasura
    app.kubernetes.io/instance: hasura
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      nodePort: 30808
  selector:
    app.kubernetes.io/name: hasura
    app.kubernetes.io/instance: hasura
