infra/manifests/hasura/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura
  namespace: hasura
  labels:
    app.kubernetes.io/name: hasura
    app.kubernetes.io/instance: hasura
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hasura
    app.kubernetes.io/instance: hasura
