infra/manifests/hasura/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hasura
  namespace: hasura
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames:
    - "hasura.brandwhisper.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hasura
          port: 8080
